Finished dialog widget.

--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -80,6 +80,7 @@ textarea:focus {
     .atk-cell {
         * {
             .border-radius(0);
+            width: 100%;
         }
         &:first-child * {
             .border-left-radius(@cornerRadius);
