First glimpse at menu component. Adjusted existing components. Reduced compiled file size from 100KB to 92KB.

--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -142,7 +142,7 @@ textarea:focus {
                     .atk-input-icon {
                         width: 100% !important;
                     }
-                    p {
+                    >* + * {
                         margin: @margin/4 0 0 0;
                     }
                     &:first-child label {
