--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -114,7 +114,7 @@ a {
 }
 .ui-widget-header {
     .clear-area;
-    color: @bodyColor;
+    color: inherit;
     .ui-state-hover {
         background: @stateHover;
     }
@@ -122,7 +122,7 @@ a {
 .ui-widget-content {
     background: @colorLight;
     border-color: @borderOverlay;
-    color: @bodyColor;
+    color: inherit;
     a {
         color: @linkColor;
         &:hover {
