--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -98,14 +98,12 @@
     }
 }
 
+
 // Buttons
 a,
-a:link,
-a:visited,
 button,
-input[type=button],
-input[type=submit] {
-    &.atk-button, &.ui-button {
+input {
+    &[class*='atk-button'], &.ui-button {
         .border-radius(@cornerRadius);
         .stateDefault;
         display: inline-block;
@@ -115,11 +113,42 @@ input[type=submit] {
         &:hover {
             .stateHover;
         }
+        &.atk-button-small {
+            padding: (0.25em * @baselineDestroyer) (0.5em * @baselineDestroyer);
+        }
+        &.atk-button-large {
+            padding: (0.75em * @baselineDestroyer) (1.5em * @baselineDestroyer);
+        }
         &.atk-button-blank {
             .buttonBlank;
         }
         &.atk-button-outline {
             .buttonOutline;
+        }
+        *[class*='atk-menu'] & {
+            .border-radius(0);
+        }
+        .atk-menu-horizontal & {
+            &:first-child {
+                .border-left-radius(@cornerRadius);
+            }
+            &:last-child {
+                .border-right-radius(@cornerRadius);
+            }
+            + *[class*='atk-button'] {
+                border-left: none;
+            }
+        }
+        .atk-menu-vertical & {
+            &:first-child {
+                .border-top-radius(@cornerRadius);
+            }
+            &:last-child {
+                .border-bottom-radius(@cornerRadius);
+            }
+            + *[class*='atk-button'] {
+                border-top: none;
+            }
         }
     }
 }
@@ -137,6 +166,40 @@ input[type=submit] {
     box-shadow: none !important;
     color: #fff !important;
 }
+*[class*=atk-menu] {
+    >* {
+        display: inline-block;
+        &[class*='atk-button'] {
+            .box-sizing(content-box);
+            min-width: 1em;
+        }
+        &.atk-cells {
+            .atk-label {
+                .box-sizing(content-box);
+                display: inline-block;
+                height: 1em * @bodyBaseline;
+                min-width: 1em * @bodyBaseline;
+                padding: 0;
+                text-align: center;
+            }
+        }
+    }
+    *[class*='icon']:before {
+        margin: 0;
+    }
+    &.atk-menu-horizontal {
+        >* {
+            text-align: center;
+        }
+    }
+    &.atk-menu-vertical {
+        >* {
+            display: block;
+            text-align: left;
+        }
+    }
+}
+
 
 // Box
 *[class*=atk-box] {
@@ -167,6 +230,7 @@ input[type=submit] {
 .atk-label {
     .border-radius(@cornerRadius);
     font-weight: bold;
+    // padding: (0.2em * @baselineDestroyer) (0.4em * @baselineDestroyer);
     padding: (0.2em * @baselineDestroyer) (0.4em * @baselineDestroyer);
 }
 
@@ -250,7 +314,7 @@ input[type=submit] {
 // Swatches
 .createSwatch(@color) {
     .@{color} {
-        &, &.atk-button[class*=atk-swatch], &.atk-label[class*=atk-swatch] {
+        & {
             .colorCheck(@@color);
             background: @@color;
             border-color: @@color;
@@ -268,11 +332,20 @@ input[type=submit] {
                     background: @@color;
                 }
             }
+            &:hover, &[class*=atk-button]:hover {
+                .colorCheck(@@color);
+                background: lighten(@@color, 5%);
+            }
         }
-        &.atk-button[class*=atk-swatch] {
+        &[class*='atk-button'], &.atk-label, .atk-table td&, .atk-table th& { 
+            .colorCheck(@@color);
+            background: @@color;
+            border-color: @@color;
+        }
+        &[class*='atk-button'] {
             border-color: darken(@@color, 10%);
             &:hover {
-                background: lighten(@@color, 5%);
+                border-color: darken(@@color, 10%);
             }
         }
     }
@@ -280,7 +353,7 @@ input[type=submit] {
 
 // Effects
 *[class*=atk-effect] {
-    &, &.atk-button {
+    &, &[class*='atk-button'] {
         &.atk-effect-danger {
             color: @effectDanger;
         }
