--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -142,120 +142,19 @@ del {
     color: red;
 }
 code, kbd, pre, samp {
-    border-top: 1px dotted #bfbfbf;
-    border-bottom: 1px dotted #bfbfbf;
+    border-top: 1px solid @borderStatic;
+    border-bottom: 1px solid @borderStatic;
     cursor: text;
-    line-height: @bodySize;
+    display: block;
+    line-height: @bodyBaseline;
     margin: 0 0 @margin;
     padding: @margin;
 }
 pre {
-    -webkit-background-clip: border-box;
-    -webkit-background-origin: padding-box;
-    -webkit-background-size: auto;
-    -webkit-transition-delay: 0s;
-    -webkit-transition-duration: 0.1s;
-    -webkit-transition-property: all;
-    -webkit-transition-timing-function: ease-in;
-    background-attachment: scroll;
-    background-clip: border-box;
-    background-color: rgba(0, 0, 0, 0);
-    background-image: none;
-    background-origin: padding-box;
-    background-size: auto;
-    border-bottom-color: rgb(191, 191, 191);
-    border-bottom-style: dotted;
-    border-bottom-width: 1px;
-    border-image-outset: 0px;
-    border-image-repeat: stretch;
-    border-image-slice: 100%;
-    border-image-source: none;
-    border-image-width: 1;
-    border-left-color: rgb(34, 34, 34);
-    border-left-style: none;
-    border-left-width: 0px;
-    border-right-color: rgb(34, 34, 34);
-    border-right-style: none;
-    border-right-width: 0px;
-    border-top-color: rgb(191, 191, 191);
-    border-top-style: dotted;
-    border-top-width: 1px;
-    box-sizing: border-box;
-    color: rgb(34, 34, 34);
-    cursor: default;
-    display: block;
     font-family: monospace, serif;
     .atk-size-milli;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: normal;
-    line-height: 30px;
-    margin-bottom: 24px;
-    margin-top: 0px;
-    outline-color: rgb(34, 34, 34);
-    outline-style: none;
-    outline-width: 0px;
-    padding: @margin;
-    position: relative;
-    transition-delay: 0s;
-    transition-duration: 0.1s;
-    transition-property: all;
-    transition-timing-function: ease-in;
-    vertical-align: baseline;
     white-space: pre-wrap;
     word-wrap: break-word;
-}
-code {
-    background-origin: padding-box;
-    background-size: auto;
-    border-bottom-color: rgb(68, 68, 68);
-    border-bottom-style: none;
-    border-bottom-width: 0px;
-    border-image-outset: 0px;
-    border-image-repeat: stretch;
-    border-image-slice: 100%;
-    border-image-source: none;
-    border-image-width: 1;
-    border-left-color: rgb(68, 68, 68);
-    border-left-style: none;
-    border-left-width: 0px;
-    border-right-color: rgb(68, 68, 68);
-    border-right-style: none;
-    border-right-width: 0px;
-    border-top-color: rgb(68, 68, 68);
-    border-top-style: none;
-    border-top-width: 0px;
-    box-sizing: border-box;
-    color: rgb(68, 68, 68);
-    cursor: default;
-    display: inline;
-    height: auto;
-    line-height: 24px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    outline-color: rgb(68, 68, 68);
-    outline-style: none;
-    outline-width: 0px;
-    padding-bottom: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-top: 0px;
-    tab-size: 3;
-    transition-delay: 0s;
-    transition-duration: 0.1s;
-    transition-property: all;
-    transition-timing-function: ease-in;
-    vertical-align: baseline;
-    white-space: pre-wrap;
-    width: auto;
-}
-ins, small {
-    line-height: @bodyBaseline;
-}
-kbd, samp {
-    line-height: @bodyBaseline;
 }
 hr {
     background: none;
