Added .atk-cells-justified option for .atk-cells.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -96,6 +96,9 @@
     &.atk-cells-gutter-small>.atk-cell + .atk-cell {
         padding-left: (0.5em * @baselineDestroyer);
     }
+    &.atk-cells-justified {
+        table-layout: fixed;
+    }
 }
 
 
