--- a/playground/css/style.less
+++ b/playground/css/style.less
@@ -1,2 +1,7 @@
 @import '../../framework/css/agiletoolkit.less';
 @import 'playground.less';
+
+.layout-template .atk-swatch-gray:hover {
+	background: darken(@atk-swatch-gray, 2%);
+	border-color: darken(@atk-swatch-gray, 2%);
+}
