--- a/framework/css/agiletoolkit.less
+++ b/framework/css/agiletoolkit.less
@@ -19,3 +19,4 @@
 @import '../less/widgets.less'; /* Bars, Tables, Tabs, Datepicker, Accordion  etc. */
 @import '../less/components.less'; /* Helpers, Colors, Boxes, Buttons etc. */
 @import '../less/variables.less'; /* Use this less file if you want to customize your theme. */
+@import '../less/responsive.less';
