--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -13,51 +13,6 @@
     .clear-font;
 }
 
-// Pushes
-.atk-push-small {
-    margin-bottom: @margin/2;
-    &:last-child {
-        margin-bottom: 0;
-    }
-}
-.atk-push {
-    margin-bottom: @margin;
-    &:last-child {
-        margin-bottom: 0;
-    }
-}
-.atk-push-large {
-   margin-bottom: @margin*2;
-    &:last-child {
-        margin-bottom: 0;
-    }
-}
-
-// Paddings
-.atk-padding-small {
-    padding: @margin/2;
-}
-.atk-padding {
-    padding: @margin;
-}
-.atk-padding-large {
-    padding: @margin*2;
-}
-.atk-padding-reset {
-    padding: 0;
-}
-
-// Sections
-.atk-section-small {
-    padding: @margin/2 0;
-}
-.atk-section {
-    padding: @margin 0;
-}
-.atk-section-large {
-    padding: @margin*2 0;
-}
-
 // Item List
 .atk-actions {
     >* {
@@ -75,11 +30,6 @@
 }
 
 // Layout
-.atk-wrapper {
-    margin-left: auto;
-    margin-right: auto;
-    width: @siteWidth !important;
-}
 .atk-cells {
     display:table;
     width: 100%;
@@ -100,7 +50,6 @@
         table-layout: fixed;
     }
 }
-
 
 // Buttons
 a,
@@ -208,13 +157,13 @@ input {
     }
 }
 
-
 // Box
 *[class*=atk-box] {
     &, &[class*=span] {
         .border-radius(@cornerRadius);
         background: @colorLight;
         border: 1px solid @borderStatic;
+        display: block;
         padding: @margin;
         margin-bottom: @margin;
         >h1, >h2, >h3, >h4, >h5, >h6 {
@@ -290,6 +239,57 @@ input {
 }
 .atk-valign-bottom {
     vertical-align: bottom !important;
+}
+
+// Pushes
+.atk-push-small {
+    margin-bottom: @margin/2;
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+.atk-push {
+    margin-bottom: @margin;
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+.atk-push-large {
+   margin-bottom: @margin*2;
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+.atk-push-reset {
+    margin-bottom: 0;
+}
+
+// Paddings
+.atk-padding-small {
+    padding: @margin/2;
+}
+.atk-padding {
+    padding: @margin;
+}
+.atk-padding-large {
+    padding: @margin*2;
+}
+.atk-padding-reset {
+    padding: 0;
+}
+
+// Sections
+.atk-section-small {
+    padding-bottom: @margin/2;
+    padding-top: @margin/2;
+}
+.atk-section {
+    padding-bottom: @margin;
+    padding-top: @margin;
+}
+.atk-section-large {
+    padding-bottom: @margin*2;
+    padding-top: @margin*2;
 }
 
 // Shapes
