--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -4,8 +4,9 @@
 
 @bodyBackground:       #fff;
 @cornerRadius:         5px;
-@siteWidth:            100%;
-@siteMinWidth:         860px;
+@windowMinWidth:       960px; // Should be equal or greater than @siteMinWidth
+@siteMinWidth:         800px; // Side paddings are dropped if value is in percentages
+@siteMaxWidth:         1600px; // Put the same value as in @siteMinWidth if fixed layout is required
 
 
 // ==========================================================
@@ -48,6 +49,7 @@
 @stateHover:           #f5f5f5;
 @stateActive:          #eee;
 
+@atk-swatch-white:	   #ffffff;		.createSwatch(atk-swatch-white);
 @atk-swatch-gray:	   #f5f6f7;		.createSwatch(atk-swatch-gray);
 @atk-swatch-ink:       #1c2933;		.createSwatch(atk-swatch-ink);
 @atk-swatch-yellow:	   #ffcc00;		.createSwatch(atk-swatch-yellow);
