--- a/playground/css/style-hybrid.less
+++ b/playground/css/style-hybrid.less
@@ -1,7 +1,8 @@
 @import '../../framework/css/agiletoolkit.less';
+@import 'playground.less';
 
 // Testing out different styling configurations
 
 @windowMinWidth:       1000px; // Should be equal or greater than @siteMinWidth
 @siteMinWidth:         800px; // Side paddings are dropped if value is in percentages
-@siteMaxWidth:         800px; // Put the same value as in @siteMinWidth if fixed layout is required
+@siteMaxWidth:         1200px; // Put the same value as in @siteMinWidth if fixed layout is required
