--- a/playground/css/style-fluid.less
+++ b/playground/css/style-fluid.less
@@ -2,6 +2,6 @@
 
 // Testing out different styling configurations
 
-@windowMinWidth:       1000px; // Should be equal or greater than @siteMinWidth
+@windowMinWidth:       100%; // Should be equal or greater than @siteMinWidth
 @siteMinWidth:         100%; // Side paddings are dropped if value is in percentages
 @siteMaxWidth:         100%; // Put the same value as in @siteMinWidth if fixed layout is required
