Labels are now scalable in menus.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -127,12 +127,12 @@ input {
         }
         &.atk-cells {
             .atk-label {
-                .box-sizing(content-box);
                 display: inline-block;
                 height: 1em * @bodyBaseline;
                 margin: 0 .2em;
                 min-width: 1em * @bodyBaseline;
-                padding: 0;
+                padding-bottom: 0;
+                padding-top: 0;
                 text-align: center;
                 &[class*='icon']:before {
                     margin: 0;
