Fix in .atk-input-icon component.

--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -70,9 +70,9 @@ textarea:focus {
     *[class*=icon] {
         .position(@t:50%, @r:0.5em);
         line-height: 1;
-        margin-top: -0.4em;
+        margin-top: -0.5em;
         &:before {
-            margin: 0;
+            margin: 1px 0 0 0;
         }
     }
 }
