Changed default @swatchText value.

--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -56,7 +56,7 @@
 @atk-swatch-red:	   #f9451f;		.createSwatch(atk-swatch-red);
 @atk-swatch-green:     #00cc66;		.createSwatch(atk-swatch-green);
 @atk-swatch-blue:      #0095ff;		.createSwatch(atk-swatch-blue);
-@swatchText:           50%; // If swatch's lightness is more than 50% then text goes dark
+@swatchText:           65%; // Text color sensitivity based on swatch
 
 @effectSuccess:        #25c425;
 @effectWarning:        #f7a600;
