Updated tabs widget.

--- a/framework/css/agiletoolkit.less
+++ b/framework/css/agiletoolkit.less
@@ -11,6 +11,7 @@
 
 // Agile Toolkit
 @import '../less/normalize.less'; /* Renders elements more consistently and in line with modern standards. */
+@import '../less/jqueryui.less';
 @import '../less/mixins.less';
 @import '../less/layouts.less';
 @import '../less/typography.less';
