Fix in .atk-input-icon. Also, fix in .atk-swatch + .icon-* mouseover.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -362,6 +362,10 @@ ul[class*=atk-menu] {
                     .colorCheck(@@color);
                     background: @@color;
                 }
+                &:hover {
+                    background: none;
+                    color: @@color;
+                }
             }
             a&:hover, &[class*=atk-button]:hover {
                 .colorCheck(@@color);
