--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -72,7 +72,8 @@ textarea:focus {
         line-height: 1;
         margin-top: -0.5em;
         &:before {
-            margin: 1px 0 0 0;
+            // margin: 1px 0 0 0;
+            margin: 0;
         }
     }
 }
