--- a/framework/css/libs/fontello.less
+++ b/framework/css/libs/fontello.less
@@ -1,10 +1,11 @@
+@addon-public: '../';
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?30854166');
-  src: url('../font/fontello.eot?30854166#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?30854166') format('woff'),
-       url('../font/fontello.ttf?30854166') format('truetype'),
-       url('../font/fontello.svg?30854166#fontello') format('svg');
+  src: url('@{addon-public}/font/fontello.eot?30854166');
+  src: url('@{addon-public}/font/fontello.eot?30854166#iefix') format('embedded-opentype'),
+       url('@{addon-public}/font/fontello.woff?30854166') format('woff'),
+       url('@{addon-public}/font/fontello.ttf?30854166') format('truetype'),
+       url('@{addon-public}/font/fontello.svg?30854166#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
