--- a/framework/less/widgets.less
+++ b/framework/less/widgets.less
@@ -3,6 +3,11 @@
 // ==========================================================
 
 
+// Navigation Bar
+.atk-bar {
+    line-height: 1;
+}
+
 // Popover
 .atk-popover.ui-dialog {
     border-color: @borderStatic;
