--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -61,3 +61,17 @@ a {
 .row {
     .clear-fix;
 }
+.labelSupport() {
+  .atk-label {
+      display: inline-block;
+      height: 1em * @bodyBaseline;
+      margin: 0 .2em;
+      min-width: 1em * @bodyBaseline;
+      padding-bottom: 0;
+      padding-top: 0;
+      text-align: center;
+      &[class*='icon']:before {
+          margin: 0;
+      }
+  }
+}
