--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -116,6 +116,7 @@ input {
 }
 ul[class*=atk-menu] {
     .clear-ul;
+    display: inline-block;
     white-space: nowrap;
     >li {
         .clear-fix;
@@ -127,15 +128,22 @@ ul[class*=atk-menu] {
         }
         // >a.atk-cells {
             .atk-label {
-                display: inline-block;
-                height: 1em * @bodyBaseline;
-                margin: 0 .2em;
-                min-width: 1em * @bodyBaseline;
-                padding-bottom: 0;
-                padding-top: 0;
-                text-align: center;
+                // display: inline-block;
+                // height: 1em * @bodyBaseline;
+                // margin: 0 .2em;
+                // min-width: 1em * @bodyBaseline;
+                // padding-bottom: 0;
+                // padding-top: 0;
+                // text-align: center;
                 &[class*='icon']:before {
                     margin: 0;
+                }
+                &.atk-shape-circle {
+                    display: inline-block;
+                    padding-top: 0;
+                    padding-bottom: 0;
+                    text-align: center;
+                    width: 1em * @bodyBaseline;
                 }
             }
         // }
