--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -16,7 +16,7 @@
 @bodyFamily:           "Helvetica Neue", "Helvetica", @jui-ffDefault;
 @bodyColor:            #000;
 @bodySize:             0.875rem; // 14px
-@bodyBaseline:         1.667; // Major Sixth
+@bodyBaseline:         1.618; // Golden Section
 
 @headingColor:         #000;
 @headingFamily:        "Helvetica Neue", "Helvetica", @jui-ffDefault;
