--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -268,6 +268,8 @@
             }
             .ui-icon {
                 font-size: 120%;
+                margin-right: -0.2rem;
+                width: auto;
             }
             &:hover {
                 color: tint(@bodyColor, 40%);
