.atk-table-border renamed to .atk-border-outline

--- a/framework/less/widgets.less
+++ b/framework/less/widgets.less
@@ -133,7 +133,7 @@
             background: lighten(@borderStatic, 9%);
         }
     }
-    &.atk-table-border>table {
+    &.atk-table-outline>table {
         border: 1px solid @borderStatic;
     }
     &.atk-table-bordered {
