--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -167,6 +167,9 @@ hr {
     &.atk-hr-small {
         margin: @margin/2 0;
     }
+    &.atk-hr-large {
+        margin: @margin*2 0;
+    }
     &.atk-hr-dotted {
         border-top-style: dotted;
     }
