--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -34,6 +34,7 @@
 @linkColorHover:       darken(@linkColor,10%);
 
 @textSelect:           @atk-swatch-ink; // Text selection's color
+@textDimmed:           40%;
 
 @borderStatic:         #e1e1e1;
 @borderClickable:      darken(@borderStatic, 10%);
@@ -61,6 +62,6 @@
 @effectSuccess:        #25c425;
 @effectWarning:        #f7a600;
 @effectDanger:         #ff2d1a;
-@effectInfo:           #02aae2;
+@effectInfo:           #6cc199;
 
 // (!) — Need to check if it can be simplified.
