--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -4,7 +4,11 @@
 
 // Text
 .atk-text-dimmed {
-    color: lighten(@bodyColor, @textDimmed);
+    @c: lighten(@bodyColor, @textDimmed);
+    color: @c;
+    a:hover& {
+        color: shade(@c, 15%);
+    }
 }
 .atk-text-nowrap {
     white-space: nowrap;
@@ -188,7 +192,7 @@ ul[class*=atk-menu] {
             }
         }
     }
-    &:not[class*=atk-actions]>li {
+    &:not([class*=atk-actions])>li {
         margin-left: 0;
     }
     &.atk-menu-horizontal {
@@ -328,12 +332,27 @@ ul[class*=atk-menu] {
 // Paddings
 *[class*=atk-padding] {
     &, .ui-tabs &.ui-tabs-panel.ui-widget-content {
-        padding: @margin;
+        padding-left: @margin;
+        padding-right: @margin;
+        &:not([class*=atk-section]) {
+            padding-bottom: @margin;
+            padding-top: @margin;
+        }
         &.atk-padding-small {
-            padding: @margin/2;
+            padding-left: @margin/2;
+            padding-right: @margin/2;
+            &:not([class*=atk-section]) {
+                padding-bottom: @margin/2;
+                padding-top: @margin/2;
+            }
         }
         &.atk-padding-large {
-            padding: @margin*2;
+            padding-left: @margin*2;
+            padding-right: @margin*2;
+            &:not([class*=atk-section]) {
+                padding-bottom: @margin*2;
+                padding-top: @margin*2;
+            }
         }
         &.atk-padding-reset {
             padding: 0;
@@ -353,6 +372,10 @@ ul[class*=atk-menu] {
         &.atk-section-large {
             padding-bottom: @margin*2;
             padding-top: @margin*2;
+        }
+        &.atk-section-reset {
+            padding-top: 0;
+            padding-bottom: 0;
         }
     }
 }
