Fixed bug in forms.

--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -149,7 +149,7 @@ label em {
                     .atk-input-icon {
                         width: 100% !important;
                     }
-                    >*:not(select) + * {
+                    >* + * {
                         margin: @margin/4 0 0 0;
                     }
                     &:first-child label {
