--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -149,7 +149,7 @@ label em {
                     .atk-input-icon {
                         width: 100% !important;
                     }
-                    >* + * {
+                    >*:not(select) + * {
                         margin: @margin/4 0 0 0;
                     }
                     &:first-child label {
@@ -166,7 +166,7 @@ label em {
                         border-color: @effectDanger;
                     }
                 }
-                &:not(:last-child)>.atk-cell {
+                >.atk-cell {
                     padding-bottom: @margin;
                 }
             }
