--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -1,4 +1,11 @@
 // ==========================================================
+// Hidden Variables
+// ==========================================================
+@margin:               round(@baselineDestroyer * @bodyBaseline, 1);
+@baselineDestroyer:    1rem;
+
+
+// ==========================================================
 // Mass Effect
 // ==========================================================
 
@@ -12,10 +19,6 @@
 body {
     background: @bodyBackground;
 }
-
-// Hidden Variables
-@margin:               @baselineDestroyer * @bodyBaseline;
-@baselineDestroyer:    1rem;
 
 
 // ==========================================================
