--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -34,7 +34,7 @@ textarea {
     padding: (0.5em * @baselineDestroyer) (0.7em * @baselineDestroyer);
 }
 textarea {
-    min-height: @margin * 3 + @margin/2;
+    min-height: @margin * 3 + round(@margin/2,2);
 }
 input[type=radio],
 input[type=checkbox] {
@@ -151,7 +151,7 @@ label em {
                         width: 100% !important;
                     }
                     >*:not(select) + * {
-                        margin: @margin/4 0 0 0;
+                        margin: round(@margin/4,2) 0 0 0;
                     }
                     &:first-child label {
                         display: inline-block;
@@ -192,7 +192,7 @@ label em {
 .atk-form-compact {
     form .atk-form-fieldset>.atk-cells>.atk-cell,
     &.atk-form-fieldset>.atk-cells>.atk-cell {
-        padding-bottom: @margin/3;
+        padding-bottom: round(@margin/3,2);
     }
 }
 .atk-form-stacked {
