--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -101,12 +101,12 @@
 }
 .ui-datepicker {
     border-color: @borderOverlay;
-    padding: @margin/2;
+    padding: round(@margin/2,2);
     .ui-datepicker-header {
         border: none;
         color: #000;
         line-height: @bodyBaseline;
-        margin: @margin/4 0 @margin/1.5 0;
+        margin: round(@margin/4,2) 0 round(@margin/1.5,2) 0;
         padding: 0;
         position: relative;
         .ui-datepicker-title {
@@ -158,7 +158,7 @@
         tr {
             a, span {
                 display: inline-block;
-                padding: @margin/5;
+                padding: round(@margin/5,2);
             }
             td, th {
                 border: 1px solid @borderStatic;
@@ -215,7 +215,7 @@
     .ui-tabs-panel.ui-widget-content {
         background: @colorLight;
         // border: 1px solid @borderStatic;
-        padding: @margin/2 0;
+        padding: round(@margin/2,2) 0;
         &[class*=atk-box] {
             border-radius: 0 0 @cornerRadius @cornerRadius !important;
             border-top: none  !important;
@@ -227,8 +227,8 @@
         .atk-size-reset;
         border-width: 1px;
         margin: 0;
-        padding-top: @margin/2;
-        padding-bottom: @margin/2;
+        padding-top: round(@margin/2,2);
+        padding-bottom: round(@margin/2,2);
         .ui-accordion-header-icon {
             left: 0.8em;
             margin-top: -0.5em;
@@ -244,7 +244,7 @@
     }
     .ui-accordion-content {
         border-color: @borderStatic;
-        padding: @margin/2;
+        padding: round(@margin/2,2);
         + .ui-accordion-header {
             margin-top: 0.2em;
         }
@@ -261,7 +261,7 @@
         }
         .ui-button.ui-dialog-titlebar-close {
             .clear-area;
-            .position(@t:@margin/4, @r:@margin/4);
+            .position(@t:round(@margin/4,2), @r:round(@margin/4),2);
             color: tint(@bodyColor, 80%);
             .ui-button-text {
                 display: none;
@@ -282,11 +282,11 @@
         .ui-dialog-buttonset {
             .atk-actions;
             border-top: 1px solid @borderStatic;
-            padding: @margin/2 @margin;
+            padding: round(@margin/2,2) @margin;
         }
         &.ui-dialog-content {
             overflow: auto;
-            padding: @margin/2 @margin @margin @margin;
+            padding: round(@margin/2,2) @margin @margin @margin;
         }
     }
 }
