Dialog blur feature introduced.

--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -261,7 +261,7 @@
         }
         .ui-button.ui-dialog-titlebar-close {
             .clear-area;
-            .position(@t:round(@margin/4,2), @r:round(@margin/4),2);
+            .position(@t:round(@margin/4,2), @r:round(@margin/4,2));
             color: tint(@bodyColor, 80%);
             .ui-button-text {
                 display: none;
