--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -6,7 +6,7 @@
 
 
 // ==========================================================
-// Mass Effect
+// General
 // ==========================================================
 
 * { 
@@ -18,6 +18,9 @@
 }
 body {
     background: @bodyBackground;
+}
+.atk-dialog-enabled {
+  .blur(@dialogBlur);
 }
 
 
