--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -2,8 +2,14 @@
 // General
 // ==========================================================
 
-@bodyBackground:       #fff;
 @cornerRadius:         5px;
+@dialogBlur:           10px; // Blur effect for modal dialog's overlay
+
+
+// ==========================================================
+// Layout
+// ==========================================================
+
 @windowMinWidth:       960px; // Should be equal or greater than @siteMinWidth
 @siteMinWidth:         800px; // Side paddings are dropped if value is in percentages
 @siteMaxWidth:         1600px; // Put the same value as in @siteMinWidth if fixed layout is required
@@ -29,6 +35,8 @@
 // ==========================================================
 // Colors
 // ==========================================================
+
+@bodyBackground:       #fff;
 
 @linkColor:            darken(@atk-swatch-blue,10%);
 @linkColorHover:       darken(@linkColor,10%);
@@ -63,5 +71,6 @@
 @effectWarning:        #f7a600;
 @effectDanger:         #ff2d1a;
 @effectInfo:           #6cc199;
+
 
 // (!) — Need to check if it can be simplified.
