Introduced new variable for tweaking overlay's color.

--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -70,6 +70,10 @@
         }
     }
 }
+.ui-widget-overlay {
+    .opacity(100);
+    background: @dialogOverlay;
+}
 .ui-helper-reset {
     font-size: @bodySize;
     line-height: @bodyBaseline;
