--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -3,7 +3,9 @@
 // ==========================================================
 
 @cornerRadius:         5px;
+
 @dialogBlur:           10px; // Blur effect for modal dialog's overlay
+@dialogOverlay:        fade(#000, 15%); // Color of modal dialog's overlay
 
 
 // ==========================================================
